--- a/static/themes/concept/theme.css
+++ b/static/themes/concept/theme.css
@@ -534,7 +534,7 @@ form.kiwi-statebrowser-newchannel a:hover {
     position: relative;
     min-height: 100%;
 }
-.kiwi-container--sidebar-open:before{
+.kiwi-container--sidebar-open .kiwi-messagelist:before{
     content:'';
     z-index: 10;
     left:0;
@@ -544,6 +544,7 @@ form.kiwi-statebrowser-newchannel a:hover {
     background-color: #000;
     opacity: 0.25;
     position: absolute;
+    pointer-events: none;
 }
 
 
@@ -582,7 +583,7 @@ form.kiwi-statebrowser-newchannel a:hover {
     line-height: 30px;
     background-color: #f5f5f5;
     color:#000;
-    font-weight: normal;  
+    font-weight: normal;
 }
 
 .kiwi-sidebar .kiwi-nicklist-info .fa.fa-search{
@@ -680,7 +681,8 @@ form.kiwi-statebrowser-newchannel a:hover {
     padding: 0;
     max-height: 45px;
     overflow: hidden;
-}
+    z-index: 200;
+} 
 
 .kiwi-header:hover{
     max-height: 45px;
