--- a/static/themes/concept/theme.css
+++ b/static/themes/concept/theme.css
@@ -1,5 +1,3 @@
-
-<style lang="less">
 .kiwi-notconnected {
     box-sizing: border-box;
     text-align: center;
@@ -51,31 +49,31 @@
     margin: 0 0.8em;
     cursor: pointer;
     transition: all 0.3s;
+}
 
-    &:hover {
-        background-color: #fff;
-        color: #000;
-        transition: all 0.2s;
-    }
+.kiwi-notconnected .button-container .button:hover{
+    background-color: #fff;
+    color: #000;
+    transition: all 0.2s;
+}
 
-    i {
-        float: left;
-        font-size: 1.6em;
-        line-height: 0.8em;
-        margin-right: 0.4em;
-    }
+.kiwi-notconnected .button-container .button i {
+    float: left;
+    font-size: 1.6em;
+    line-height: 0.8em;
+    margin-right: 0.4em;
+}
 
-    &.connection-settings {
-        font-size: 0.6em;
-        clear: both;
-        display: block;
-        max-width: 160px;
-        margin: 1em auto;
+.kiwi-notconnected .button-container .button.connection-settings{
+    font-size: 0.6em;
+    clear: both;
+    display: block;
+    max-width: 160px;
+    margin: 1em auto;
+}
 
-        i {
-            line-height: 1em;
-        }
-    }
+.kiwi-notconnected .button-container .button.connection-settings i
+    line-height: 1em;
 }
 
 @media screen and (max-width: 1024px) {
@@ -91,11 +89,11 @@
         padding: 0.6em 0.8em 0.6em 0.4em;
         width: 90%;
         box-sizing: border-box;
+    }
 
-        &.connection-settings {
-            font-size: 1em;
-            max-width: none;
-        }
+    .kiwi-notconnected .button-container .button.connection-settings{
+        font-size: 1em;
+        max-width: none;
     }
 
     .kiwi-notconnected .button-container .button i {
@@ -155,19 +153,23 @@
     text-align: center;
     outline: none;
 }
+
 .u-button:hover {
     opacity: 0.75;
 }
+
 .u-button-primary {
     background-color: #42b992;
     border: none;
     border-bottom: 1px solid #369c7b;
     color: #fff;
 }
+
 .u-button-secondary {
     background: rgba(117, 117, 117, 0.07);
     border-bottom: 1px solid rgba(117, 117, 117, 0.2);
 }
+
 .u-button-warning {
     background-color: #ca3c3c;
     border-bottom: 1px solid #5f1515;
@@ -177,15 +179,19 @@
 .input-text {
     background: #fff;
 }
+
 .input-text-label {
     color: gray;
 }
+
 .input-text--focus {
     border-color: #42b992;
 }
+
 .input-text-underline {
     border-color: #a9a9a9;
 }
+
 .input-text-underline-active {
     background: #42b992;
 }
@@ -263,15 +269,15 @@
 }
 
 .kiwi-statebrowser-profile .user-avatar {
-    width: 78px;
-    height: 78px;
+    width: 50px;
+    height: 50px;
     border: 2px solid #42b992;
     background-color: #000;
     color: #fff;
     cursor: pointer;
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
-    line-height: 78px;
+    line-height: 50px;
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto 15px auto;
@@ -417,7 +423,6 @@ form.kiwi-statebrowser-newchannel a:hover {
     text-decoration: underline;
     color: #6dcdad;
 }
-
 
 /* Add network button */
 .kiwi-statebrowser-newnetwork {
@@ -960,7 +965,7 @@ form.kiwi-statebrowser-newchannel a:hover {
 
 
 /*Not connected message */
-.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected{
+.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected{
     margin-left: 0;
     padding: 0;
     border: none;
@@ -969,16 +974,16 @@ form.kiwi-statebrowser-newchannel a:hover {
     text-align: center !important;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected .kiwi-messagelist-nick{
+.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected .kiwi-messagelist-nick{
     display: none;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected .kiwi-messagelist-modern-right{
+.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected .kiwi-messagelist-modern-right{
     margin-left: 0;
     padding: 0;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected .kiwi-messagelist-modern-right .kiwi-messagelist-body{
+.kiwi-messagelist-message-connection.kiwi-messagelist-message-connection-connected .kiwi-messagelist-modern-right .kiwi-messagelist-body{
     margin-bottom: 0;
     text-align: center;
     cursor: default;
@@ -1057,11 +1062,6 @@ form.kiwi-statebrowser-newchannel a:hover {
     display: none;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-repeat.kiwi-messagelist-message-privmsg.kiwi-messagelist-message--own .kiwi-messagelist-body{
-    padding-left: 0;
-}
-
-
 /* Topic Styling */
 .kiwi-container .kiwi-messagelist-message-topic {
     background-color: #fff;
@@ -1111,6 +1111,12 @@ form.kiwi-statebrowser-newchannel a:hover {
 
 .kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-mode .kiwi-messagelist-nick{
     display: none;
+}
+
+
+.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-traffic.kiwi-messagelist-message-traffic-join.kiwi-messagelist-message--own,
+.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-mode{
+    padding-left: 23px !important;
 }
 
 /* Style the user nickname and time */
@@ -1377,6 +1383,3 @@ form.kiwi-statebrowser-newchannel a:hover {
         margin-left: 20%;
     }
 }
-
-
-</style>
