--- a/static/themes/concept/theme.css
+++ b/static/themes/concept/theme.css
@@ -1467,6 +1467,17 @@ form.kiwi-statebrowser-newchannel a:hover {
     min-height: 500px;
 }
 
+@media screen and (max-width: 1700px){
+    .kiwi-container--sidebar-open .kiwi-sidebar-section-settings{
+        right: 0%;
+        width: 40%;
+    }
+
+    .kiwi-sidebar-section-settings{
+        right: -40%;
+    }
+}
+
 @media screen and (max-width: 1500px){
     .kiwi-statebrowser{
         width: 15%;
@@ -1482,15 +1493,6 @@ form.kiwi-statebrowser-newchannel a:hover {
     }
     .kiwi-workspace{
         margin-left: 20%;
-    }
-
-    .kiwi-container--sidebar-open .kiwi-sidebar-section-settings{
-        right: 0%;
-        width: 40%;
-    }
-
-    .kiwi-sidebar-section-settings{
-        right: -40%;
     }
 }
 
